--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <title>Hello JavaScript</title>
-        <script src="scripts/script.js"></script>
+
     </head>
     <body>
-
+        <img src="images/js_logo.png">
+        <script src="scripts/script.js"></script>
     </body>
 </html>
