JavaScript logo image 2  added commit

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
         <img src="images/js_logo.png">
+        <img src="images/js_logo.2.png">
         <script src="scripts/script.js"></script>
+
     </body>
 </html>
