JavaScript logo image 3  added commit

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <img src="images/js_logo.png">
         <img src="images/js_logo.2.png">
+        <img src="images/js_logo.3.png">
         <script src="scripts/script.js"></script>
 
     </body>
